3.07

Compatibility tweaks for RT4

3.06

New 'Extract Custom Field Values With Code in Template' action
that allows your ExtractCustomFieldValues template to contain 
Text::Template code in case your template needs to be dynamic.

3.05
doc updates
get rid of uninit warnings

3.04
packaging release

3.03
Add feature to search all of the headers of a mail, rather than
just a specific header.

3.02
Parse text/html part if it's the only part in an email
Don't run callback on negative matches

3.01
Fix signature

3.00
Release updated parser from 2.99 dev releases

2.99_02
If you specified an invalid CF in your template or used the
match-any-cf option and your regex matched something that wasn't
a CF name, the Scrip would die before completing

2.99_01
Rewrite to use method calls, not functions, and support extraction
from _all_ text/plain MIME parts, not just the first.

2.05
Previous versions could find disabled versions of custon fields if
they had duplicate names.  Work around this by not using
LoadByNameAndQueue.

2.0
Fix initialdata quoting

1.9
Add wildcard functionality
Documentation and example fixups

1.8
Bump Module::Install::RTx version

1.7
Minor code cleanups
More logging
Warnings

1.6
Added support for running code on a match without updating a custom field.
Refactor the Action code to handle this case.

Best Practical local:
* Converted to RTx module.

1.2b1
added support for multiple value custom fields (values sep. by ",")
(Thanks to Steven Turner, MIT)

1.1b3
corrected a typo, which reappeared from a temporary version

1.1b2
added Command to change the Separator througout the template

1.1b1
added Option "q" for not recording transactions

1.0b2
fixed a bug, when called for a transaction without Attachment
